# KonsoleDemo

./: CMakeLists.txt  README.md
src/: konsolewidget.cpp  konsolewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  splitterm.cpp  splitterm.h
